[gd_scene load_steps=7 format=3 uid="uid://cdgd86gixkeap"]

[ext_resource type="Script" path="res://Menu/audio.gd" id="1_aje0t"]
[ext_resource type="Theme" uid="uid://dfgnx6so8jd63" path="res://Inventory/GUI/BG.tres" id="1_vbc7o"]
[ext_resource type="AudioStream" uid="uid://bxbd8745es6p7" path="res://Audio/sfx/swing3.wav" id="3_jm5e0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oo4dk"]
bg_color = Color(0.6, 0.6, 0.6, 0.333333)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
expand_margin_left = 16.0
expand_margin_top = 16.0
expand_margin_right = 16.0
expand_margin_bottom = 16.0

[sub_resource type="LabelSettings" id="LabelSettings_w5fhr"]
font_size = 50
outline_size = 32
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_3y2c0"]
font_size = 32
outline_size = 16
outline_color = Color(0, 0, 0, 1)

[node name="Audio" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aje0t")

[node name="MenuPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(350, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -175.0
offset_right = 175.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_oo4dk")

[node name="VBC" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Title" type="Label" parent="MenuPanel/VBC"]
layout_mode = 2
size_flags_vertical = 6
text = "Audio"
label_settings = SubResource("LabelSettings_w5fhr")
horizontal_alignment = 1

[node name="Music" type="HBoxContainer" parent="MenuPanel/VBC"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MenuPanel/VBC/Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "Music"
label_settings = SubResource("LabelSettings_3y2c0")

[node name="HSlider" type="HSlider" parent="MenuPanel/VBC/Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
max_value = 1.0
step = 0.1

[node name="SFX" type="HBoxContainer" parent="MenuPanel/VBC"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MenuPanel/VBC/SFX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
text = "SoundFX"
label_settings = SubResource("LabelSettings_3y2c0")

[node name="HSlider" type="HSlider" parent="MenuPanel/VBC/SFX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
max_value = 1.0
step = 0.1

[node name="Back" type="Button" parent="MenuPanel/VBC"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 6
theme = ExtResource("1_vbc7o")
text = "Back"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_jm5e0")
bus = &"SFX"

[connection signal="value_changed" from="MenuPanel/VBC/Music/HSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="MenuPanel/VBC/SFX/HSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="MenuPanel/VBC/Back" to="." method="_on_back_pressed"]
